2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity): Add field frames_pending_eviction.
	Note that we now include frames that are in the laundry in the
	FRAMES_TOTAL and FRAMES_LOCAL variables.
	* object.c (object_desc_claim): If claiming a non-discardable
	eviction candidate, update ACTIVITY's FRAMES_LOCAL, and it and its
	ancestors' FRAMES_TOTAL and FRAMES_PENDING_EVICTION fields.
	* pager.c (reclaim_from): Update VICTIM->FRAMES_LOCAL,
	FRAMES_TOTAL and FRAMES_PENDING_EVICTION appropriately.
	(process): If ACTIVITY_FRAMES is less than GOAL / 1000, don't
	bother collecting the activity.
	(pager_collect): Loop at most 8 times.  Increase the active factor
	by two.  When calling process, don't include the frames pending
	eviction.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity): Add field priorities_count.
	* activity.c (activity_destroy): Update it.
	* object.c (object_desc_claim): Likewise.
	* pager.c (reclaim_from): Likewise.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* viengoos.h (viengoos_tid): New declaration.
	(ager_tid): New declaration.
	* viengoos.c (viengoos_tid): New variable.
	(ager_tid): Likewise.
	(ager_start): Don't push Viengoos's tid on the stack.  Save the
	ager's tid in AGER_TID and Viengoos's in VIENGOOS_TID.
	* ager.h (ager_loop): Don't take any arguments.
	* ager.c: Include "viengoos.h".
	(ager_loop): Don't take any arguments.  Use VIENGOOS_TID, not
	MAIN_THREAD.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* profile.c (profile_end): Only dump profile statistics every
	100000 samples if the debug output level is or exceeds 5.
	(profile_stats_dump): When printing the per-call time, also print
	the first digit after the period.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* activity.c: Include "profile.h".
	(activity_destroy): If ACTIVITY is the root activity, dump the
	profile statistics before panicking.

2008-06-22  Neal H. Walfield  <neal@gnu.org>
